--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,6 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+
+Isra Hatim <isra.hatim2@gmail.com>
+Omar Abdulrahim <omarvx211@gmail.com>
